[project]
name = "oppo-udp-ha"
version = "0.0.3"
description = "Home Assistant integration for Oppo/Magnetar Blu-ray players"
requires-python = ">=3.14.2"
dependencies = [
    "homeassistant==2026.7.1",
    "voluptuous==0.15.2",
]

[dependency-groups]
dev = [
    "ruff==0.15.19",
    "pyright==1.1.411"
]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["custom_components", "tests"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "B",      # bugbear
    "I",      # isort
    "PL",     # pylint
    "UP",     # pyupgrade
    "SIM",    # simplify
    "ASYNC",  # async rules
    "S",      # security
    "C4",     # comprehensions
    "RUF",    # ruff-specific
    "TRY",    # tryceratops
    "PERF",   # perflint
    "DTZ",    # datetimez
    "PTH",    # pathlib
    "RET",    # return rules
    "G",      # logging-format
    "LOG",    # logging
    "PIE",    # flake8-pie
    "A",      # builtins
    "ARG",    # unused arguments
    "BLE",    # blind except
    "ISC",    # implicit string concat
    "FLY",    # flynt
    "FURB",   # refurb
    "RSE",    # raise rules
    "T20",    # print
    "INP",    # namespace packages
    "TCH",    # type-checking
    "EM",     # errmsg
    "SLF",    # self-access
    "TID",    # tidy imports
    "FBT",    # boolean trap
]

ignore = [
    "ISC003",  # conflicts with pyright reportImplicitStringConcatenation
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR2004", # magic-value-comparison (noisy)
    "PLW0603", # global-statement
    "TRY300",  # try-consider-else
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = ["homeassistant"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pytz".msg = "use datetime.timezone instead"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"

[tool.pyright]
include = ["custom_components/**"]
exclude = ["**/__pycache__", "build", "dist"]
extraPaths = ["custom_components"]
# Standard venv name. Devs with custom venv names must override in their IDE.
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = "error"
reportUnknownLambdaType = "error"
# Module-level state vars use UPPER_CASE by convention. Mutable globals not constants.
reportConstantRedefinition = false
reportPrivateImportUsage = false
reportImplicitOverride = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
deprecateTypingAliases = true
reportUninitializedInstanceVariable = "error"
reportPropertyTypeMismatch = "error"
reportCallInDefaultInitializer = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
